apply looan form with sweetalert

--- a/src/app/modules/relationshipexecutive/applyloan/applyloan.component.css
+++ b/src/app/modules/relationshipexecutive/applyloan/applyloan.component.css
@@ -28,11 +28,11 @@
 
     
     width: 100%;
-    margin: 20px;
+   
 }
 mat-form-field{
  
-   font-size: small;
+   font-size: large;
    
     padding-left:10px ;
 
