cibilscore And Cibilcheck

--- a/src/app/modules/relationshipexecutive/viewenquiry/viewenquiry.component.html
+++ b/src/app/modules/relationshipexecutive/viewenquiry/viewenquiry.component.html
@@ -8,7 +8,8 @@
         <th scope="col">Customer Alternate Mobile Number</th>
         <th scope="col">Customer EmailId</th>
         <th scope="col">Customer Date of Birth</th>
-        <th>CheckCibil</th>
+        <th>ENQUIRY STATUS</th>
+        <th>Customer Register Status</th>
       
     </tr>  
     
@@ -21,7 +22,10 @@
         <td>{{p.customerAlternateMobileNumber}}</td>
         <td>{{p.customerEmailId}}</td>
         <td>{{p.customerDateOfBirth}}</td>
+        <td>{{p.enquiryStatus}}</td>
+        
         <td><button routerLink="/application/oe/view_all">checkcibil</button></td>
+        
         
       </tr>
       
