--- a/src/app/modules/operationalexecutive/view-allenquiry/view-allenquiry.component.html
+++ b/src/app/modules/operationalexecutive/view-allenquiry/view-allenquiry.component.html
@@ -1,34 +1,63 @@
-<table class="table" border="2">
-    
-    <tr>
-        <th scope="col">EnquiryId</th>
-        <th scope="col">Customer Name</th>
-        <th scope="col">Pan Card Number</th>
-        <th scope="col">Customer Mobile Number</th>
-        <th scope="col">Customer Alternate Mobile Number</th>
-        <th scope="col">Customer EmailId</th>
-        <th scope="col">Customer Date of Birth</th>
-        <th scope="col">CheckCibil</th>
-        <th>Cibil Score</th>
-        <th>Statue</th>
-      
-    </tr>  
-    
-      <tr *ngFor="let p of enqq">
-        
-        <td>{{p.enquiryId}}</td>
-        <td>{{p.customerName}}</td>
-        <td>{{p.pancardNumber}}</td>
-        <td>{{p.customerMobileNumber}}</td>
-        <td>{{p.customerAlternateMobileNumber}}</td>
-        <td>{{p.customerEmailId}}</td>
-        <td>{{p.customerDateOfBirth}}</td>
-        <td><button (click)="checkcibil()">checkcibil</button></td>
-        <td>{{cibil}} </td>
-        <td><button>Reject</button>
-            <button>Accecpt</button></td>
-        
-      </tr>
-      
-  </table>
 
+<div class="container-fluid">
+    <div class=" text-center mt-5 ">
+     <h2> <b>View All Enquiry Data</b></h2>
+   </div>
+   
+ 
+ 
+   <div class="container">
+     
+       <table class="table table-striped" border="8 Solid Black">
+         <tbody >
+           <tr>
+           <th scope="col">ENQUIRY ID</th>
+           <th scope="col">CUSTOMER NAME</th>       
+           <th scope="col">PAN CARD NO. </th>
+           <th scope="col">Email </th>
+           <th scope="col">DATE OF BIRTH</th>
+           <th scope="col">MOBILE NO.</th>
+           <th scope="col">ENQUIRY STATUS</th>
+           <th scope="col">CIBIL SCORE</th>
+           <th scope="col">REMARK</th>
+           <th scope="col">CIBIL SCORE CHECK</th>
+           <th scope="col"></th>
+           <th scope="col"></th>
+           
+         </tr>
+           <tr *ngFor="let e of enquiry">
+              
+               <td>{{e.enquiryId}}</td>
+               <td>{{e.customerName}}</td>
+               <td>{{e.pancardNumber}}</td>
+               <td>{{e.customerEmailId}}</td>
+               <td>{{e.customerDateOfBirth}}</td>
+               <td>{{e.customerMobileNumber}}</td>
+               <td>{{ e.enquiryStatus }}</td>
+               <td>{{ e.cibilScore.cibilScore }}</td>
+               <td>{{ e.cibilScore.cibilRemark }}</td>
+               <td>
+                 <button
+                   *ngIf="e.cibilScore.cibilScore == 0"
+                   (click)="checkCIBIL(e.enquiryId, e)" 
+                   style="background-color: green; color: white"> Check</button>
+               </td>
+               <td>
+                 <button
+                   *ngIf="e.cibilScore.cibilScore !=0 && e.enquiryStatus === 'INPROCESS' &&   e.cibilScore.cibilScore >= 750  "
+                   (click)="approveEnquiry(e.enquiryId, e)"
+                   style="background-color: green; color: white" > Approve</button>
+               </td>
+               <td>
+                 <button
+                   *ngIf="e.cibilScore.cibilScore !=0 && e.enquiryStatus === 'INPROCESS' && e.cibilScore.cibilScore >0 && e.cibilScore.cibilScore < 750  "
+                   (click)="rejectEnquiry(e.enquiryId, e)"
+                   style="background-color: red; color: white" >Reject</button>
+               </td>
+ 
+             </tr>
+           </tbody>
+         </table>
+       </div>
+     </div>
+ 
