--- a/src/app/modules/operationalexecutive/view-allenquiry/view-allenquiry.component.html
+++ b/src/app/modules/operationalexecutive/view-allenquiry/view-allenquiry.component.html
@@ -8,7 +8,43 @@
  
  
    <div class="container">
-     
+    <table class="table" border="2">
+      <tr>
+          <th scope="col">EnquiryId</th>
+          <th scope="col">Customer Name</th>
+          <th scope="col">Pan Card Number</th>
+          <th scope="col">Customer Mobile Number</th>
+          <th scope="col">Customer Alternate Mobile Number</th>
+          <th scope="col">Customer EmailId</th>
+          <th scope="col">Customer Date of Birth</th>
+          <th scope="col">CheckCibil</th>
+          <th>Cibil Score</th>
+          <th>Action</th>
+          <th>Status</th>
+        
+      </tr>         
+        <tr *ngFor="let p of eqruiry">
+          
+          <td>{{p.id}}</td>
+          <td>{{p.customerName}}</td>
+          <td>{{p.pancardNumber}}</td>
+          <td>{{p.customerMobileNumber}}</td>
+          <td>{{p.customerAlternateMobileNumber}}</td>
+          <td>{{p.customerEmailId}}</td>
+          <td>{{p.customerDateOfBirth}}</td>
+          <td><button (click)="checkcibil(p)" >checkcibil</button></td>
+          <!-- (click)="conform()" -->
+          <td>{{p.bankDatail.cibilScore}} </td>
+          <td><button (click)="rejectd(p)" >Reject</button>
+             <button (click)="accpet(p)" >Accecpt</button></td> 
+              <td style="color: aliceblue;">{{p.bankDatail.cibilStatus}}</td>
+        
+    </table>
+   </div>
+
+
+
+    <!--      
        <table class="table table-striped" border="8 Solid Black">
          <tbody >
            <tr>
@@ -20,7 +56,6 @@
            <th scope="col">MOBILE NO.</th>
            <th scope="col">ENQUIRY STATUS</th>
            <th scope="col">CIBIL SCORE</th>
-           <th scope="col">REMARK</th>
            <th scope="col">CIBIL SCORE CHECK</th>
            <th scope="col"></th>
            <th scope="col"></th>
@@ -58,7 +93,5 @@
  
              </tr>
            </tbody>
-         </table>
-       </div>
-     </div>
- 
+         </table> -->
+    
