--- a/src/app/modules/admin/add-employee/add-employee.component.html
+++ b/src/app/modules/admin/add-employee/add-employee.component.html
@@ -1,106 +1,60 @@
-<section class="vh-150" style="background-color: #eee;"style="width: 600px;">
-    <div class="container h-100" >
-      <div class="row d-flex justify-content-center align-items-center h-100" >
-        <div class="col-lg-12 col-xl-11">
-          <div class="card text-black" style="border-radius: 55px; width:800px; margin-left: 100px;">
-            <div class="card-body p-md-5">
-              <div class="row justify-content-center">
-                <div class="col-md-10 col-lg-6 col-xl-5 order-2 order-lg-1">
-    
-                  <form class="mx-1 mx-md-4">
-  
-                    <div class="d-flex flex-row align-items-center mb-4">
-                      <div class="form-outline flex-fill mb-0">
-                        <input type="text" id="form3Example1c" formControlName="employeeName" placeholder="Enter Your Name"/>
-                       
-                      </div>
-                    </div>
-  
-                    <div class="d-flex flex-row align-items-center mb-4">
-                    
-                      <div class="form-outline flex-fill mb-0">
-                        <input type="text" id="form3Example3c" formControlName="areaName" placeholder="Enter Your AreaName"/>
-                     
-                      </div>
-                    </div>
-  
-                    <div class="d-flex flex-row align-items-center mb-4">
-                      <div class="form-outline flex-fill mb-0">
-                        <input type="text" id="form3Example4c" formControlName="cityName" placeholder="Enter Your City Name"/>
-                      
-                      </div>
-                    </div>
+<div style=" transform:scale(.8)">
+  <form [formGroup]="empreg" (ngSubmit)="SaveEmployee()">
 
-                    
-                    <div class="d-flex flex-row align-items-center mb-4">
-                        <div class="form-outline flex-fill mb-0">
-                          <input type="text" id="form3Example4c" formControlName="districtName" placeholder="Enter Your District Name"/>
-                        
-                        </div>
-                      </div>
-  
-                    <div class="d-flex flex-row align-items-center mb-4">
-                      <div class="form-outline flex-fill mb-0">
-                        <input type="text" id="form3Example4cd" formControlName="landMark" placeholder="Enter Your Landmark" />
-                       
-                      </div>
-                    </div>
-                   
-                  </form>
-  
-                </div>
-                <div class="col-md-10 col-lg-6 col-xl-7 d-flex align-items-center order-1 order-lg-2">
-  
-                    <form class="mx-1 mx-md-4">
-  
-                        <div class="d-flex flex-row align-items-center mb-4">
-                          <div class="form-outline flex-fill mb-0">
-                            <input type="text" id="form3Example1c" formControlName="stateName" placeholder="Enter Your StateName"/>
-                           
-                          </div>
-                        </div>
-      
-                        <div class="d-flex flex-row align-items-center mb-4">
-                        
-                          <div class="form-outline flex-fill mb-0">
-                            <input type="number" id="form3Example3c" formControlName="pinCode" placeholder="Enter Your PinCode"/>
-                         
-                          </div>
-                        </div>
-      
-                        <div class="d-flex flex-row align-items-center mb-4">
-                          <div class="form-outline flex-fill mb-0">
-                            <input type="number" id="form3Example4c" formControlName="employeeMobileNo" placeholder="Enter Your Mobile No"/>
-                          
-                          </div>
-                        </div>
     
-                        
-                        <div class="d-flex flex-row align-items-center mb-4">
-                            <div class="form-outline flex-fill mb-0">
-                              <input type="text" id="form3Example4c" formControlName="employeeEmail" placeholder="Enter Your EmailId"/>
-                            
-                            </div>
-                          </div>
+                  <ng-template matStepLabel>Personal Details</ng-template>
+                  <mat-form-field>
+                      <mat-label>Full Name</mat-label>
+                      <input matInput placeholder="Full Name" formControlName="employeeName" required>
+                  </mat-form-field>
+                  <mat-form-field>
+                      <mat-label> Addreess</mat-label>
+                      <input matInput placeholder="address" formControlName="employeeAdress" required>
+                  </mat-form-field>
 
-                          <div class="d-flex flex-row align-items-center mb-4">
-                            <div class="form-outline flex-fill mb-0">
-                              <input type="text" id="form3Example4c" formControlName="employeeDesignation" placeholder="Enter Your Designation"/>
-                            
-                            </div>
-                          </div>
-                      
-                        <div class="d-flex justify-content-center mx-4 mb-3 mb-lg-4">
-                            <button type="button" class="btn btn-primary btn-lg">Register</button>
-                          </div>
-        
-                      </form>
-  
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
+                  <mat-form-field>
+                      <mat-label> Mobile Number</mat-label>
+                      <input matInput placeholder="Mobile number" formControlName="employeeNumber" required>
+                  </mat-form-field>
+                  <mat-form-field>
+                      <mat-label> Employee Email</mat-label>
+                      <input matInput placeholder="Email Id" formControlName="employeeEmail" required>
+                  </mat-form-field>
+                  <mat-form-field>
+                      <mat-label> Employee Role</mat-label>
+                      <input matInput placeholder="relationship executive" formControlName="employeeRole" required>
+                  </mat-form-field>
+                  <table class="table" border="2">
+
+
+                    <tr>
+                        <td> <label for="file">Select Profile Image:-</label></td>
+                        <td><input type="file" id="prof" (change)="onSelectProfile($event)"></td>
+                    </tr>
+                    <tr>
+                        <td> <label for="ad">Select Aadhar Doc:-</label></td>
+                        <td><input type="file" id="ad" (change)="onSelectAadhar($event)"></td>
+                    </tr>
+                    <tr>
+                        <td> <label for="pann">Select Pan doc:-</label></td>
+                        <td> <input type="file" id="pann" (change)="onSelectPan($event)"></td>
+                    </tr>
+                    <tr>
+                        <td> <label for="signe">Select Signature:-</label></td>
+                        <td><input type="file" id="signe" (change)="onSelectSign($event)"></td>
+                    </tr>
+                                      
+                </table>
+
+
+                   <div>
+                  
+                  </div>
+                  <button type="submit" color="accent" >Submit</button>
+         
+       
+         
+         
+     
+  </form>
+</div>
