--- a/src/app/entry/application-dashboard/application-dashboard.component.html
+++ b/src/app/entry/application-dashboard/application-dashboard.component.html
@@ -1,4 +1,4 @@
-<app-app-header></app-app-header>
+<app-app-header [getUserType]="type"></app-app-header>
 <div class="frame">
     <div class="menu">
         <app-menu></app-menu>
@@ -6,6 +6,5 @@
     <div class="routeroutlet">
         
         <router-outlet></router-outlet>
-        
     </div>
 </div>
