pipe is working

--- a/src/app/templates/app-header/app-header.component.html
+++ b/src/app/templates/app-header/app-header.component.html
@@ -1,9 +1,11 @@
-<nav>
-    <h1 style="font-family:'Times New Roman', Times, serif; font-size: 20px; color: red;pp">{{getUserType |  usertype}}</h1>
-    <marquee behavior="left" direction="left">
+<nav style="justify-content: center ;display: flex;">
+
+       
+    <h1 style="font-family:'Times New Roman', Times, serif; font-size: 20px; color: red; float: left;">{{getUserType |  usertype}}</h1>
+    <!-- <marquee behavior="left" direction="left">
         <b>   <h2 align="center"
            >
           Welcome to the Secure Finance </h2></b>
-    </marquee>
+    </marquee> -->
     <button mat-raised-button color="warn" routerLink="/">Logout</button>
 </nav>
