--- a/src/app/modules/operationalexecutive/checkcibil/checkcibil.component.html
+++ b/src/app/modules/operationalexecutive/checkcibil/checkcibil.component.html
@@ -19,12 +19,12 @@
 
                <div class="group">
                   <div class="title" style="color: #aa141d;">Enter Name</div>
-                  <input id="inputBox"  type="text" placeholder="Enter Name" class="interest-rate" formControlName="interest" />
+                  <input id="inputBox"  type="text" placeholder="Enter Name" class="interest-rate" formControlName="name" />
               </div>
 
               <div class="group">
                   <div class="title" style="color: #aa141d;">Date Of Birth</div>
-                  <input id="inputBox"  type="date" placeholder="Enter date" class="loan-tenure"  formControlName="tenure"/>
+                  <input id="inputBox"  type="date" placeholder="Enter date" class="loan-tenure"  formControlName="date"/>
               </div> 
           </form>
       </div>
